issus fixed #20158 Store switcher not aligned proper in tab view
issus fixed #20158 Store switcher not aligned proper in tab view

--- a/app/design/frontend/Magento/luma/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Theme/web/css/source/_module.less
@@ -319,6 +319,23 @@
             }
         }
     }
+    .page-header{
+        .switcher {
+            .options {
+                ul.dropdown {
+                    right: 0;
+                    &:before{
+                        right: 10px;
+                        left: auto;
+                    }
+                    &:after {
+                        right: 9px;
+                        left: auto;
+                    }
+                }
+            }
+        }
+    }
 
     //
     //  Widgets
